[gd_scene load_steps=4 format=3 uid="uid://c2f8bjsqjtmdb"]

[ext_resource type="Script" uid="uid://ixfos38yuhud" path="res://scripts/UI/LevelButton.gd" id="1_emfp6"]
[ext_resource type="Texture2D" uid="uid://dpjjgsmv10hnx" path="res://resources/LevelFrame.png" id="1_nddmr"]
[ext_resource type="Texture2D" uid="uid://ce5nu8fg75qog" path="res://resources/LevelFrameHover.png" id="2_enqhw"]

[node name="LevelButton" type="TextureButton"]
modulate = Color(1, 1, 1, 0.223529)
custom_minimum_size = Vector2(51.2, 51.2)
layout_direction = 2
offset_right = 51.2
offset_bottom = 51.2
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("1_nddmr")
texture_hover = ExtResource("2_enqhw")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("1_emfp6")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
